<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
            android:id="@+id/ivImage"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <LinearLayout
            android:background="@android:color/transparent"
            android:id="@+id/llTong"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:weightSum="10"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.CallActivity">


        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tvNameCall"
                    android:fontFamily="@font/sanfranciscotext_regular"
                    android:textColor="#FFFFFF"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Unknow"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="30sp"
            />

            <TextView
                    android:fontFamily="@font/sanfranciscotext_regular"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:id="@+id/tvPhoneCall"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:text="mobile"
                    android:layout_height="wrap_content"/>
            <Chronometer
                    android:visibility="invisible"
                    android:textColor="@color/background"
                    android:id="@+id/chronometer"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:visibility="invisible"
                android:paddingRight="@dimen/_20sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:layout_weight="4.5"
                android:weightSum="10"
                android:orientation="vertical"
                android:id="@+id/llFuntion"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_weight="5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
            >

                <ImageView
                        android:id="@+id/imgMute"
                        android:layout_centerInParent="true"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/mute"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"/>
                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:layout_below="@+id/imgMute"
                        android:layout_width="@dimen/_60sdp"
                        android:textSize="17sp"
                        android:text="@string/mute"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:id="@+id/imgKeyPad"
                        android:layout_centerInParent="true"
                        android:src="@drawable/keypad"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"/>
                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:layout_centerInParent="true"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:layout_below="@+id/imgMute"
                        android:layout_width="@dimen/_60sdp"
                        android:textSize="17sp"
                        android:text="@string/keypad"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:id="@+id/imgSpeaker"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/speaker"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"/>
                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:layout_alignParentRight="true"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:layout_below="@+id/imgMute"
                        android:layout_width="@dimen/_60sdp"
                        android:textSize="17sp"
                        android:text="Speaker"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_weight="5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
            >

                <ImageView
                        android:id="@+id/imgAddCall"
                        android:layout_centerInParent="true"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/addcall"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"/>
                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:layout_below="@+id/imgAddCall"
                        android:layout_width="@dimen/_60sdp"
                        android:textSize="17sp"
                        android:text="Add call"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:id="@+id/imgFaceTime"
                        android:layout_centerInParent="true"
                        android:src="@drawable/facetime"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"/>
                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:layout_centerInParent="true"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:lines="1"
                        android:layout_below="@+id/imgFaceTime"
                        android:layout_width="@dimen/_70sdp"
                        android:textSize="17sp"
                        android:text="@string/facetime"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:id="@+id/imgContacts"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/contacts"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"/>
                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:layout_alignParentRight="true"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:layout_below="@+id/imgContacts"
                        android:layout_width="@dimen/_60sdp"
                        android:textSize="17sp"
                        android:text="@string/contacts"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

        <FrameLayout
                android:layout_marginBottom="@dimen/_50sdp"
                android:id="@+id/fl_gr_all"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <RelativeLayout
                    android:id="@+id/rl_GroupAll"
                    android:paddingTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <RelativeLayout
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_25sdp"
                        android:paddingRight="@dimen/_30sdp"
                        android:id="@+id/rl_groupRemind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:id="@+id/ivRemind"
                            android:src="@drawable/alarm"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"/>
                    <TextView
                            android:fontFamily="@font/sanfranciscotext_regular"
                            android:textColor="#fff"
                            android:layout_below="@+id/ivRemind"
                            android:layout_width="wrap_content"
                            android:textSize="17sp"
                            android:text="Remind Me"
                            android:layout_height="wrap_content"/>
                    <ImageView
                            android:layout_marginRight="@dimen/_10sdp"
                            android:id="@+id/ivMessage"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/message"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"/>
                    <TextView
                            android:fontFamily="@font/sanfranciscotext_regular"
                            android:id="@+id/tvRemind"
                            android:layout_alignParentRight="true"
                            android:textColor="#fff"
                            android:layout_below="@+id/ivMessage"
                            android:layout_width="wrap_content"
                            android:textSize="17sp"
                            android:text="Message"
                            android:layout_height="wrap_content"/>

                </RelativeLayout>

                <RelativeLayout
                        android:layout_below="@+id/rl_groupRemind"
                        android:visibility="visible"
                        android:id="@+id/rl_groupCall"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <at.markushi.ui.CircleButton
                            android:id="@+id/btn_CallEnd"
                            android:padding="@dimen/_15sdp"
                            android:layout_width="@dimen/_70sdp"
                            android:layout_height="@dimen/_70sdp"
                            android:src="@drawable/call_end"
                            app:cb_color="#FF001E"
                    />

                    <at.markushi.ui.CircleButton
                            android:id="@+id/btn_CallStart"
                            android:layout_alignParentEnd="true"
                            android:padding="@dimen/_15sdp"
                            android:layout_width="@dimen/_70sdp"
                            android:layout_height="@dimen/_70sdp"
                            android:src="@drawable/call_start"
                            app:cb_color="#4cda63"
                    />

                </RelativeLayout>


                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:id="@+id/tvDealine"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/_30sdp"
                        android:textColor="#fff"
                        android:layout_below="@+id/rl_groupCall"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:text="Decline"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:fontFamily="@font/sanfranciscotext_regular"
                        android:id="@+id/tvAccept"
                        android:layout_alignParentRight="true"
                        android:textColor="#fff"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:layout_below="@+id/rl_groupCall"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:text="Accept"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>
            <at.markushi.ui.CircleButton
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:id="@+id/btn_callEnd2"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_15sdp"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/call_end"
                    app:cb_color="#FF001E"

            />

            <com.ebanx.swipebtn.SwipeButton
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:id="@+id/swipe_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:inner_text="Slide to answwer"
                    app:inner_text_color="@android:color/white"
                    app:inner_text_size="16sp"
                    app:inner_text_background="@drawable/bg_swip"
                    app:button_image_height="70dp"
                    app:button_image_width="70dp"
                    app:button_image_disabled="@drawable/icon_call_keo"
                    app:button_background="@drawable/shape_button"
                    app:initial_state="disabled"
                    app:has_activate_state="true"
            />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>
